--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,8 @@
   font-family: arial;
 }
 
-.container{
-  width: 80%;
+.container {
+  width: 60%;
   margin: 0 auto;
 }
 
@@ -16,6 +16,18 @@
 
 .flex-row {
   flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .justify-end {
@@ -28,6 +40,14 @@
 
 .gap-16 {
   gap: 16px;
+}
+
+.gap-24 {
+  gap: 24px;
+}
+
+.gap-32 {
+  gap: 32px;
 }
 
 .nav {
@@ -44,4 +64,21 @@
   border-radius: 4px;
   text-decoration: none;
   font-weight: bold;
+}
+
+.card {
+  border: solid 1px gray;
+  border-radius: 6px;
+  padding: 12px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+}
+
+.product-img {
+  max-width: 100%;
+  max-height: 250px;
+}
+
+.product-container {
+  width: 80%;
+  margin: 0 auto;
 }
